--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 body {
+  background-color: rgba(214, 214, 214, 0.562);
   text-align: center;
-  font-family: monospace;
-  background-color: rgb(214, 214, 214, 0.5);
+}
+
+header {
+  font-family: "Press Start 2P", cursive;
+  font-size: 20px;
 }
 
 canvas {
-  border: 1em solid rgb(133, 15, 211);
-  border-radius: 20px;
+  border: 1em solid rgb(112, 112, 112);
+  border-radius: 25px;
 }
