--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ button {
   width: 3em;
   height: 3em;
   margin-right: 20px;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+button:hover {
+  background: rgba(111, 192, 45, 0.678);
+  transform: scale(1.15);
 }
 
 canvas {
